remove perf api, added log for refinement